add duncan's comments

--- a/AppOutput/Health/ABCCARE_health_at_65_table.tex
+++ b/AppOutput/Health/ABCCARE_health_at_65_table.tex
@@ -1,7 +1,9 @@
-\begin{tabular}{ccccccc}
-\toprule
-Condition && \multicolumn{2}{c}{Female} &  & \multicolumn{2}{c}{Male}\\
-& & Control & Treated & & Control & Treated \\ \midrule
-Cancer	&	&	18.2	&	16.0	&	&	13.4	&	13.7	\\Diabetes	&	&	47.1	&	46.7	&	&	45.5	&	47.1	\\Heart disease	&	&	35.7	&	35.2	&	&	37.3	&	35.4	\\Hypertension	&	&	94.8	&	94.1	&	&	86.8	&	87.5	\\Lung disease	&	&	26.3	&	33.9	&	&	19.3	&	20.7	\\Stroke	&	&	17.7	&	16.2	&	&	21.0	&	17.8	\\
-\bottomrule
-\end{tabular}
+\begin{tabular}{lcccc} \toprule
+ & \multicolumn{2}{c}{Female} & \multicolumn{2}{c}{Female} \\
+ & Control  & Treatment  & Control  & Treatment  \\  \midrule 
+Cancer              &     0.198 &     0.131 &     0.000 &     0.036 \\  
+Diabetes           &     0.319 &     0.298 &     0.129 &     0.366 \\  
+Heart Diseases  &     0.158 &     0.211 &     0.110 &     0.105 \\  
+Hypertension    &     0.816 &     0.813 &     0.484 &     0.631 \\  
+Lunge Disease  &     0.172 &     0.228 &     0.187 &     0.095 \\  
+Stroke Disease &     0.098 &     0.062 &     0.071 &     0.036 \\  \toprule \end{tabular}
