--- a/Appendices/Health/method_analysis.tex
+++ b/Appendices/Health/method_analysis.tex
@@ -34,9 +34,9 @@ age 30--34 data in years 2002--2013 were used to impute measured BMI values for 
 
 \noindent After imputing values of measured BMI for PSID respondents age 30--34, we turned to the second problem: accounting for systematic trends in BMI from the age 30 interview to the health interview.  The goal was to have a model that could map from measured BMI at the health interview around age 34 to self-reported BMI at the age 30 interview.  Employing the longitudinal structure of PSID, we matched each respondent's first interview between age 30--32 with their imputed measured BMI at between ages 33--40.  We then estimated a model using self-reported BMI between ages 30--32 as the response variable and imputed measured BMI at ages 33--40, the age when BMI is measured, along with other variables observed at age 30 as explanatory variables. This imputation model was applied to any ABC or CARE subject who has their health interview at least one year after their age 30 interview.\\
 
-For ABC and CARE subjects who have their health interview within one year of the age 30 interview, we assumed that any systematic time trends in BMI are too small to have any practical significance.  However, we still needed to convert the imputed measured BMI to a self-reported value for compatibility with other transition models estimated in PSID.  This model was estimated on ages 30--32 in the PSID and uses covariates from the age 30 interview along with imputed measured BMI to predict self-reported BMI. \\
+\noindent For ABC and CARE subjects who have their health interview within one year of the age 30 interview, we assumed that any systematic time trends in BMI are too small to have any practical significance.  However, we still needed to convert the imputed measured BMI to a self-reported value for compatibility with other transition models estimated in PSID.  This model was estimated on ages 30--32 in the PSID and uses covariates from the age 30 interview along with imputed measured BMI to predict self-reported BMI. \\
 
-At the beginning of each simulation repetition, we chose the appropriate model to impute self-reported BMI for each ABC or CARE subject based on the time between their age 30 interview and their health interview. Their expected BMI was estimated from this model. A Monte Carlo Normal random draw was generated using the subject's expected BMI and the estimated variance from the model. This Monte Carlo draw was then assigned to be the subject's initial self-reported BMI in the simulation. Using BMI from the health interview limited the ABC and CARE subjects simulated in FAM to only those who had height and weight measured in the health interview. \\
+\noindent At the beginning of each simulation repetition, we chose the appropriate model to impute self-reported BMI for each ABC or CARE subject based on the time between their age 30 interview and their health interview. Their expected BMI was estimated from this model. A Monte Carlo Normal random draw was generated using the subject's expected BMI and the estimated variance from the model. This Monte Carlo draw was then assigned to be the subject's initial self-reported BMI in the simulation. Using BMI from the health interview limited the ABC and CARE subjects simulated in FAM to only those who had height and weight measured in the health interview. \\
 
 \noindent Subjects' health insurance coverage affects their medical costs.
 FAM uses three categories of health insurance: none, public only, and some private.
@@ -389,25 +389,25 @@ GDP assumptions for 2020-2100 are based on the 2008 OASDI Trustee's Report long-
 \end{figure}
 
 \subsubsection{Bootstrap Sampling Strategy}
-The data sets used for estimating models in FAM are resampled in order to get estimates of sampling error in simulated outcomes.  PSID, HRS, MEPS, and MCBS all have complex survey designs that incorporate stratification and clustering.  In each of these data sets, the exact sampling strata and clusters are not publicly available, but approximations are included for the purpose of variance estimation.  The bootstrap methods in FAM were developed to implement the sampling strategy of \citet{McCarthy-Snowden_1985_Bootstrap}: randomly select $n_h-1$ sampling units with replacement from stratum $h$, where $n_h$ is the number of sampling units in stratum $h$. \\
 
-PSID started with an initial sample of families in 1968.  Each generation of children from those families became sample members as they formed their own households.  The sample members present in the 1999--2013 PSID waves are used to estimate FAM models.   The PSID data used for estimation also includes a sample targeting immigrants that entered in 1997.  We randomly select one cluster from each variance estimation stratum in the 1968 and 1997 cohorts, with replacement.  Any family (original sample members or their descendants) belonging to that cluster are eligible to be included in the estimation for that bootstrap sample. \\
+\noindent The data sets used for estimating models in FAM are resampled in order to get estimates of sampling error in simulated outcomes.  PSID, HRS, MEPS, and MCBS all have complex survey designs that incorporate stratification and clustering.  In each of these data sets, the exact sampling strata and clusters are not publicly available, but approximations are included for the purpose of variance estimation.  The bootstrap methods in FAM were developed to implement the sampling strategy of \citet{McCarthy-Snowden_1985_Bootstrap}: randomly select $n_h-1$ sampling units with replacement from stratum $h$, where $n_h$ is the number of sampling units in stratum $h$. \\
 
-The HRS is resampled at the household level. From each variance estimation stratum, $n_h-1$ households are randomly selected with replacement, where $n_h$ is the number of households in the stratum. Observations for each household member are eligible to be included in the estimation for that bootstrap sample. \\
+\noindent PSID started with an initial sample of families in 1968.  Each generation of children from those families became sample members as they formed their own households.  The sample members present in the 1999--2013 PSID waves are used to estimate FAM models.   The PSID data used for estimation also includes a sample targeting immigrants that entered in 1997.  We randomly select one cluster from each variance estimation stratum in the 1968 and 1997 cohorts, with replacement.  Any family (original sample members or their descendants) belonging to that cluster are eligible to be included in the estimation for that bootstrap sample. \\
 
-In MCBS, $n_h-1$ individuals are resampled with replacement from each variance estimation stratum, where $n_h$ is the number of individual beneficiaries in the stratum. \\
+\noindent The HRS is resampled at the household level. From each variance estimation stratum, $n_h-1$ households are randomly selected with replacement, where $n_h$ is the number of households in the stratum. Observations for each household member are eligible to be included in the estimation for that bootstrap sample. \\
 
-MEPS is resampled by dwelling unit.  Each MEPS bootstrap sample randomly selects $n_h-1$ dwelling units with replacement from each variance estimation stratum, where $n_h$ is the number of dwelling units in the stratum.  All members of the dwelling unit are eligible to be in the estimation sample.
+\noindent In MCBS, $n_h-1$ individuals are resampled with replacement from each variance estimation stratum, where $n_h$ is the number of individual beneficiaries in the stratum. \\
+
+\noindent MEPS is resampled by dwelling unit.  Each MEPS bootstrap sample randomly selects $n_h-1$ dwelling units with replacement from each variance estimation stratum, where $n_h$ is the number of dwelling units in the stratum.  All members of the dwelling unit are eligible to be in the estimation sample.
 
 \subsubsection{Medical Costs Before Age 30 Interview}
-Data on utilization of medical services is sparse before the age 30 interview.  There are questions about utilization in the age 12, 15, and 21 interviews along with records of births for female subjects.  We combined this with information about demographics, family structure, and parents' utilization of public services to estimate medical costs at each age from 8 to 32.  Models were estimated separately for males and females.  All imputation and cost models are estimated using MEPS data. \\
 
-Medical costs for ages 8 to 11 were estimated in three stages using age 12 interview data. First, we impute whether or not a subject spent a week in the hospital for those subjects who are missing this information in their age 12 interview.  The imputation model predicts utilization based on race and whether or not the subject was ever diagnosed with asthma between ages 8--11.  Next we separate the ABC and CARE subjects into the group that spent a week in the hospital in this age range and the group that did not.  For the group that did not spend any time in the hospital, we predicted medical costs as a two stage model.  The first stage predicts whether there were any medical costs at all.  Then, the second stage predicts the amount of medical costs for those subjects who were predicted to have some costs.  We assume the group that spent time in the hospital had some medical costs, so we skip the first stage and go directly to predicting the amount.  The cost models use race, asthma diagnosis, whether or not the father was absent from the home, family use of food stamps, and number of siblings as predictors.
+\noindent Data on utilization of medical services is sparse before the age 30 interview.  There are questions about utilization in the age 12, 15, and 21 interviews along with records of births for female subjects.  We combined this with information about demographics, family structure, and parents' utilization of public services to estimate medical costs at each age from 8 to 32.  Models were estimated separately for males and females.  All imputation and cost models are estimated using MEPS data. \\
 
-Medical costs for ages 12 to 14 follow a strategy similar to the age 8--11 costs. First, we impute whether or not a subject had any hospitalization for those subjects who do not report this in their age 15 interview.  Imputations are based on race and presence or a	bsence of an asthma diagnosis between ages 12--14.  Again, we separated the ABC and CARE subjects into a group that had a hospitalization between age 8--11 and a group that did not.  A two-stage model was used to predict medical costs for those with no hospitalization.  Medical costs for the group that had a hospitalization were estimated directly from a single-stage model.  These cost models use race, asthma diagnosis, whether the mother, father, or both parents were absent from the home, family use of food stamps, and number of siblings. 
+\noindent Medical costs for ages 8 to 11 were estimated in three stages using age 12 interview data. First, we impute whether or not a subject spent a week in the hospital for those subjects who are missing this information in their age 12 interview.  The imputation model predicts utilization based on race and whether or not the subject was ever diagnosed with asthma between ages 8--11.  Next we separate the ABC and CARE subjects into the group that spent a week in the hospital in this age range and the group that did not.  For the group that did not spend any time in the hospital, we predicted medical costs as a two stage model.  The first stage predicts whether there were any medical costs at all.  Then, the second stage predicts the amount of medical costs for those subjects who were predicted to have some costs.  We assume the group that spent time in the hospital had some medical costs, so we skip the first stage and go directly to predicting the amount.  The cost models use race, asthma diagnosis, whether or not the father was absent from the home, family use of food stamps, and number of siblings as predictors.\\
 
-To estimate medical costs for ages 15 to 20, we first impute whether or not the subject spent time in the hospital for those who are missing this information in the age 21 interview.  The imputation model was based on race, asthma diagnosis between ages 15--20, and, for females, the birth of any children.  The age 21 interview asks about the number of days spent in the hospital.  However, it does not record the ages at which these hospital stays occurred.  Considering the difficulty of assigning the hospital days to specific ages in the absence of other information, we decided to use only the indicator of whether or not there were any days spent in the hospital.  Next, we separated subjects into a group that spent some time in the hospital between ages 15--20 and those who did not.  As before, we used the direct model to predict costs for those who had been to the hospital and used a two-stage model for those who had not.  The cost models predict costs based on race, asthma diagnosis, any births (female model only), use of food stamps, whether or not the subject was working age, work status, living at college, and living with parents, and marital status. 
+\noindent Medical costs for ages 12 to 14 follow a strategy similar to the age 8--11 costs. First, we impute whether or not a subject had any hospitalization for those subjects who do not report this in their age 15 interview.  Imputations are based on race and presence or a	bsence of an asthma diagnosis between ages 12--14.  Again, we separated the ABC and CARE subjects into a group that had a hospitalization between age 8--11 and a group that did not.  A two-stage model was used to predict medical costs for those with no hospitalization.  Medical costs for the group that had a hospitalization were estimated directly from a single-stage model.  These cost models use race, asthma diagnosis, whether the mother, father, or both parents were absent from the home, family use of food stamps, and number of siblings.\\
 
-Unlike the interviews at younger ages, the age 30 interview does not ask about utilization of medical services.  To estimate costs for ages 21--31, we skipped the utilization imputation step and moved directly to cost models. We used two-stage cost models.  The first stage predicts whether or not there were any costs based on race, asthma diagnosis between ages 21-31, education, use of food stamps, any births (female model only), whether or not the subject was working age, living at college, living with parents, and marital status.
+\noindent To estimate medical costs for ages 15 to 20, we first impute whether or not the subject spent time in the hospital for those who are missing this information in the age 21 interview.  The imputation model was based on race, asthma diagnosis between ages 15--20, and, for females, the birth of any children.  The age 21 interview asks about the number of days spent in the hospital.  However, it does not record the ages at which these hospital stays occurred.  Considering the difficulty of assigning the hospital days to specific ages in the absence of other information, we decided to use only the indicator of whether or not there were any days spent in the hospital.  Next, we separated subjects into a group that spent some time in the hospital between ages 15--20 and those who did not.  As before, we used the direct model to predict costs for those who had been to the hospital and used a two-stage model for those who had not.  The cost models predict costs based on race, asthma diagnosis, any births (female model only), use of food stamps, whether or not the subject was working age, work status, living at college, and living with parents, and marital status.\\
 
-
+\noindent Unlike the interviews at younger ages, the age 30 interview does not ask about utilization of medical services.  To estimate costs for ages 21--31, we skipped the utilization imputation step and moved directly to cost models. We used two-stage cost models.  The first stage predicts whether or not there were any costs based on race, asthma diagnosis between ages 21-31, education, use of food stamps, any births (female model only), whether or not the subject was working age, living at college, living with parents, and marital status.
