anna intermediary form of sensitivity table

--- a/output/sensitivity.tex
+++ b/output/sensitivity.tex
@@ -4,29 +4,29 @@
 \cmidrule(lr){2-4}      \cmidrule(lr){5-7}      \cmidrule(lr){8-10}																			
 Removed Component       &       NPV     &       IRR     &       B/C     &       NPV     &       IRR     &       B/C     &       NPV     &       IRR     &       B/C     \\																			
 \midrule																			
-None	&		&	0.15	&	\textbf{3.38}	&		&	-.10	&	6.75	&		&	0.10	&	\textbf{4.75}	\\
-	&		&	(0.11)	&	(1.59)	&		&	(0.11)	&	(6.22)	&		&	(0.10)	&	(2.04)	\\ \\
-Parental Income	&	\textbf{158,017}	&	0.05	&	1.72	&	45,511	&	-.10	&	6.27	&	\textbf{74,718}	&	0.08	&	\textbf{3.96}	\\
-	&	(43,586)	&	(0.05)	&	(1.49)	&	(45,289)	&	(0.10)	&	(6.10)	&	(25,250)	&	(0.07)	&	(2.05)	\\
-Subject QALY	&	0	&	0.15	&	\textbf{3.38}	&	0	&	-.10	&	6.75	&	0	&	0.10	&	\textbf{4.75}	\\
-	&	(0.00)	&	(0.11)	&	(1.59)	&	(0.00)	&	(0.11)	&	(6.22)	&	(0.00)	&	(0.10)	&	(2.04)	\\
-Subject Labor Income	&	44,201	&	0.16	&	\textbf{2.92}	&	124,655	&	-.06	&	5.44	&	93,992	&	-.08	&	\textbf{3.76}	\\
-	&	(151,724)	&	(0.10)	&	(0.78)	&	(639,086)	&	(0.10)	&	(4.72)	&	(119,314)	&	(0.09)	&	(1.72)	\\
-Subject Transfer Income	&	-1,276	&	0.16	&	\textbf{3.40}	&	-2,318	&	-.10	&	6.78	&	6,255	&	0.10	&	\textbf{4.68}	\\
-	&	(34,263)	&	(0.11)	&	(1.60)	&	(33,759)	&	(0.11)	&	(6.23)	&	(9,411)	&	(0.10)	&	(2.04)	\\
-Medical Expenditures	&	14,344	&	0.15	&	\textbf{3.23}	&	14,905	&	\textbf{0.13}	&	6.59	&	14,645	&	\textbf{0.10}	&	\textbf{4.60}	\\
-	&	(82,883)	&	(0.15)	&	(1.55)	&	(146,935)	&	(0.10)	&	(6.17)	&	(39,129)	&	(0.07)	&	(2.03)	\\
-Control Contamination	&	\textbf{19,884}	&	\textbf{0.12}	&	\textbf{3.17}	&	\textbf{15,608}	&	-.10	&	6.59	&	\textbf{15,073}	&	0.09	&	\textbf{4.59}	\\
-	&	(3,147)	&	(0.08)	&	(1.59)	&	(2,324)	&	(0.11)	&	(6.21)	&	(2,229)	&	(0.09)	&	(2.03)	\\
-Education Costs	&	-47,183	&	0.16	&	\textbf{3.88}	&	15,340	&	-.10	&	6.59	&	-11,353	&	0.11	&	\textbf{4.87}	\\
-	&	(14,395)	&	(0.11)	&	(1.58)	&	(13,222)	&	(0.11)	&	(6.23)	&	(11,316)	&	(0.10)	&	(2.06)	\\
-Crime Costs	&	\textbf{133,116}	&	0.14	&	1.98	&	427,343	&	0.07	&	2.25	&	\textbf{257,780}	&	0.07	&	2.04	\\
-	&	(44,756)	&	(0.10)	&	(1.47)	&	(447,081)	&	(0.09)	&	(3.64)	&	(172,485)	&	(0.06)	&	(1.15)	\\ \\
-Deadweight Loss	&		&	0.23	&	\textbf{4.70}	&		&	-.10	&	9.70	&		&	0.13	&	\textbf{6.77}	\\
-	&		&	(0.18)	&	(2.36)	&		&	(0.12)	&	(9.36)	&		&	(0.13)	&	(3.04)	\\
-0\% Discount Rate	&		&		&	\textbf{7.10}	&		&		&	14.72	&		&		&	\textbf{11.89}	\\
-	&		&		&	(4.66)	&		&		&	(15.56)	&		&		&	(5.21)	\\
-5\% Discount Rate	&		&		&	\textbf{2.39}	&		&		&	4.29	&		&		&	\textbf{2.81}	\\
-	&		&		&	(0.90)	&		&		&	(3.61)	&		&		&	(1.17)	\\
+None	&		&	0.10	&	2.44	&		&	\textbf{0.15}	&	\textbf{10.78}	&		&	\textbf{0.13}	&	\textbf{5.73}	\\
+	&		&	(0.07)	&	(1.09)	&		&	(0.05)	&	(4.79)	&		&	(0.04)	&	(2.12)	\\ \\
+Parental Income	&	\textbf{112,402}	&	0.04	&	1.05	&	\textbf{91,722}	&	\textbf{0.12}	&	\textbf{9.72}	&	\textbf{115,026}	&	\textbf{0.08}	&	\textbf{4.43}	\\
+	&	(54,785)	&	(0.02)	&	(0.97)	&	(50,235)	&	(0.04)	&	(4.79)	&	(33,070)	&	(0.02)	&	(2.00)	\\
+Subject QALY	&	59,203	&	\textbf{0.10}	&	2.36	&	213,866	&	\textbf{0.14}	&	\textbf{9.53}	&	\textbf{127,014}	&	\textbf{0.12}	&	\textbf{4.71}	\\
+	&	(66,433)	&	(0.08)	&	(1.02)	&	(4.17e+17)	&	(0.06)	&	(4.42)	&	(80,190)	&	(0.05)	&	(2.09)	\\
+Subject Labor Income	&	39,587	&	0.09	&	1.97	&	191,868	&	\textbf{0.14}	&	\textbf{8.67}	&	112,510	&	\textbf{0.12}	&	\textbf{4.38}	\\
+	&	(94,213)	&	(0.08)	&	(0.79)	&	(370,654)	&	(0.05)	&	(3.86)	&	(133,018)	&	(0.05)	&	(1.88)	\\
+Subject Transfer Income	&	5,151	&	0.10	&	2.43	&	\textbf{-908}	&	\textbf{0.15}	&	\textbf{10.81}	&	-7,381	&	\textbf{0.13}	&	\textbf{5.76}	\\
+	&	(14,301)	&	(0.07)	&	(1.10)	&	(8.45e+15)	&	(0.05)	&	(4.82)	&	(7,559)	&	(0.04)	&	(2.13)	\\
+Medical Expenditures	&	-51,391	&	0.10	&	2.52	&	\textbf{-72,912}	&	\textbf{0.15}	&	\textbf{11.15}	&	-66,496	&	\textbf{0.14}	&	\textbf{6.00}	\\
+	&	(26,805)	&	(0.08)	&	(1.13)	&	(1.51e+17)	&	(0.04)	&	(4.78)	&	(23,745)	&	(0.04)	&	(2.13)	\\
+Control Contamination	&	\textbf{16,725}	&	0.08	&	2.25	&	\textbf{13,543}	&	\textbf{0.14}	&	\textbf{10.63}	&	\textbf{13,879}	&	\textbf{0.12}	&	\textbf{5.56}	\\
+	&	(2,297)	&	(0.05)	&	(1.09)	&	(2,105)	&	(0.05)	&	(4.79)	&	(1,604)	&	(0.04)	&	(2.12)	\\
+Education Costs	&	-41,792	&	\textbf{0.11}	&	\textbf{2.81}	&	12,234	&	\textbf{0.14}	&	\textbf{10.72}	&	-16,551	&	\textbf{0.13}	&	\textbf{5.86}	\\
+	&	(13,198)	&	(0.07)	&	(1.09)	&	(14,072)	&	(0.05)	&	(4.82)	&	(9,328)	&	(0.04)	&	(2.12)	\\
+Crime Costs	&	\textbf{89,735}	&	0.08	&	1.63	&	446,517	&	\textbf{0.10}	&	4.24	&	194,724	&	\textbf{0.10}	&	\textbf{3.36}	\\
+	&	(41,511)	&	(0.07)	&	(0.99)	&	(421,521)	&	(0.05)	&	(3.22)	&	(197,764)	&	(0.04)	&	(1.29)	\\ \\
+Deadweight Loss	&		&	0.15	&	\textbf{3.51}	&		&	\textbf{0.18}	&	\textbf{16.04}	&		&	\textbf{0.19}	&	\textbf{8.51}	\\
+	&		&	(0.13)	&	(1.64)	&		&	(0.06)	&	(7.25)	&		&	(0.06)	&	(3.18)	\\
+0\% Discount Rate	&		&		&	4.99	&		&		&	\textbf{27.06}	&		&		&	\textbf{14.53}	\\
+	&		&		&	(3.54)	&		&		&	(13.59)	&		&		&	(5.86)	\\
+5\% Discount Rate	&		&		&	1.72	&		&		&	\textbf{6.37}	&		&		&	\textbf{3.51}	\\
+	&		&		&	(0.64)	&		&		&	(2.66)	&		&		&	(1.23)	\\
 \bottomrule																			
 \end{tabular}																			
