--- a/output/sensitivityforslides.tex
+++ b/output/sensitivityforslides.tex
@@ -4,24 +4,24 @@
 																		
 Removed Component       &       NPV     &       IRR     &       B/C        \\																	
 \midrule																			
-None	&		&	\textbf{0.13}	&	\textbf{5.73}	\\
-	&	(0.04)	&	(2.12)	\\ \\
-Parental Income	&\textbf{115,026}	&	\textbf{0.08}	&	\textbf{4.43}	\\
-	&	(33,070)	&	(0.02)	&	(2.00)	\\
-Subject QALY	&	\textbf{127,014}	&	\textbf{0.12}	&	\textbf{4.71}	\\
-	&	(80,190)	&	(0.05)	&	(2.09)	\\
+None	&	378,318	&	\textbf{0.13}	&	\textbf{5.73}	\\
+	&	& (0.04)	&	(2.12)	\\ \\
+Parental Income	&115,026 &	\textbf{0.08}	&	\textbf{4.43}	\\
+	&		&	(0.02)	&	(2.00)	\\
+Subject QALY	&	127,014	&	\textbf{0.12}	&	\textbf{4.71}	\\
+	&		&	(0.05)	&	(2.09)	\\
 Subject Labor Income & 112,510	&	\textbf{0.12}	&	\textbf{4.38}	\\
-	&	(133,018)	&	(0.05)	&	(1.88)	\\
+	&		&	(0.05)	&	(1.88)	\\
 Subject Transfer Income	&	-7,381	&	\textbf{0.13}	&	\textbf{5.76}	\\
- 	&	(7,559)	&	(0.04)	&	(2.13)	\\
+ 	&		&	(0.04)	&	(2.13)	\\
 Medical Expenditures	&	-66,496	&	\textbf{0.14}	&	\textbf{6.00}	\\
-	&	(23,745)	&	(0.04)	&	(2.13)	\\
-Control Contamination	&	\textbf{13,879}	&	\textbf{0.12}	&	\textbf{5.56}	\\
-	&	(1,604)	&	(0.04)	&	(2.12)	\\
-Education Costs	-16,551	&	\textbf{0.13}	&	\textbf{5.86}	\\
-	&	(9,328)	&	(0.04)	&	(2.12)	\\
+	&		&	(0.04)	&	(2.13)	\\
+Control Contamination	&	13,879	&	\textbf{0.12}	&	\textbf{5.56}	\\
+	&		&	(0.04)	&	(2.12)	\\
+Education Costs	& -16,551	&	\textbf{0.13}	&	\textbf{5.86}	\\
+	&		&	(0.04)	&	(2.12)	\\
 Crime Costs	&	194,724	&	\textbf{0.10}	&	\textbf{3.36}	\\
-	&	(197,764)	&	(0.04)	&	(1.29)	\\ \\
+	&		&	(0.04)	&	(1.29)	\\ \\
 Deadweight Loss	&		&	\textbf{0.19}	&	\textbf{8.51}	\\
 	&	&	(0.06)	&	(3.18)	\\
 0\% Discount Rate	&		&		&	\textbf{14.53}	\\
