--- a/output/sensitivity.tex
+++ b/output/sensitivity.tex
@@ -30,3 +30,4 @@ Deadweight Loss	&		&	0.15	&	\textbf{3.51}	&		&	\textbf{0.18}	&	\textbf{16.04}	&	
 	&		&		&	(0.64)	&		&		&	(2.66)	&		&		&	(1.23)	\\
 \bottomrule																			
 \end{tabular}																			
+%added total NPV
